minikube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dev-test
    tier: backend
  name: dev-test-deploy
  namespace: dev-test-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dev-test
      tier: backend
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 2
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dev-test
        tier: backend
    spec:
      containers:
      - env:
        - name: DATABASE_USER
          value: user
        - name: DATABASE_NAME
          value: ./dev.sqlite
        - name: DATABASE_PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: dev-test-pass
              optional: false
        image: hectorfaria/dev-test
        imagePullPolicy: Always
        name: dev-test
        readinessProbe:
          httpGet:
            path: /api/users
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /api/users
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 30
        ports:
        - containerPort: 8000
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 250m
            memory: 50Mi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
