minikube/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dev-test
    tier: backend
  name: dev-test-srv
  namespace: dev-test-ns
spec:
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 32000
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: dev-test
    tier: backend
  sessionAffinity: None
  type: NodePort
